--- a/politicas.html
+++ b/politicas.html
@@ -1,6 +1,6 @@
 <h2>Política Privacidade</h2>
 <p>A sua privacidade é importante para nós. É política do Protocolo Zero Barriga respeitar a sua privacidade em relação
-    a qualquer informação sua que possamos coletar no site <a href=https://zerobarriga.digital />Protocolo Zero
+    a qualquer informação sua que possamos coletar no site <a href=https://zerobarriga1.store />Protocolo Zero
     Barriga</a>, e outros sites que possuímos e operamos.</p>
 <p>Solicitamos informações pessoais apenas quando realmente precisamos delas para lhe fornecer um serviço. Fazemo-lo por
     meios justos e legais, com o seu conhecimento e consentimento. Também informamos por que estamos coletando e como
