--- a/termos.html
+++ b/termos.html
@@ -1,5 +1,5 @@
 <h2>1. Termos</h2>
-<p>Ao acessar ao site <a href='https://zerobarriga.digital/'>Protocolo Zero Barriga</a>, concorda em cumprir estes
+<p>Ao acessar ao site <a href='https://zerobarriga1.store/'>Protocolo Zero Barriga</a>, concorda em cumprir estes
     termos de serviço, todas as leis e regulamentos aplicáveis ​​e concorda que é responsável pelo cumprimento de todas
     as leis locais aplicáveis. Se você não concordar com algum desses termos, está proibido de usar ou acessar este
     site. Os materiais contidos neste site são protegidos pelas leis de direitos autorais e marcas comerciais
